# wordbomb

./: README.md  app.py  index.html  pyproject.toml
templates/: admin.html  index.html
