[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.4"
description = "haha tymofii bomb go brrr"
authors = ["Tymofii Zeniuk <ujh1906@edu.kunskapsskolan.se>"]

[tool.poetry.dependencies]
python = "^3.11"
eventlet = "^0.40.3"
flask = "^3.1.2"
flask-socketio = "^5.5.1"
python-socketio = "^5.14.3"
gunicorn = "^22.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
